fix: add space to nospace on mobile

--- a/src/main/resources/assets/styles/parts/_imageblock.scss
+++ b/src/main/resources/assets/styles/parts/_imageblock.scss
@@ -175,7 +175,7 @@
   }
 }
 
-@media screen and (max-width: 814px) {
+@media screen and (max-width: 414px) {
   .image-block {
     & > .content {
       h1 {
@@ -187,6 +187,16 @@
 
       .image-block-text {
         max-width: 100%;
+
+        .title {
+          span {
+            &.nospace {
+              &::before {
+                content: ' ',
+              }
+            }
+          }
+        }
       }
     }
   }
